--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ Tienda para la compra de equipación del Club de Natación Buruntzaldea">
             <div class="card col-12 col-md-6 p-3 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/8306-1-696x1175.jpeg" alt="Motxila txikia" title="">
+                        <img src="assets/images/8306-mochila-grande-page-1-565x958.jpg" alt="Motxila txikia" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5">
@@ -370,7 +370,7 @@ Tienda para la compra de equipación del Club de Natación Buruntzaldea">
     </div>
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-6j" data-rv-view="45">
+<section class="mbr-section" id="witsec-modal-window-block-6j" data-rv-view="11">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -423,7 +423,7 @@ Tienda para la compra de equipación del Club de Natación Buruntzaldea">
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-6i" data-rv-view="46">
+<section class="mbr-section" id="witsec-modal-window-block-6i" data-rv-view="12">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -476,7 +476,7 @@ Tienda para la compra de equipación del Club de Natación Buruntzaldea">
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-6g" data-rv-view="47">
+<section class="mbr-section" id="witsec-modal-window-block-6g" data-rv-view="13">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -529,7 +529,7 @@ Tienda para la compra de equipación del Club de Natación Buruntzaldea">
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-6h" data-rv-view="48">
+<section class="mbr-section" id="witsec-modal-window-block-6h" data-rv-view="14">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -1161,7 +1161,7 @@ Tienda para la compra de equipación del Club de Natación Buruntzaldea">
                 <p class="mbr-text"><strong>Beste guneak - Otros sitios</strong><br><a href="https://www.buruntzaldeaikt.eus/" class="text-white">Web Nagusia</a>&nbsp;| <a href="https://www.es.buruntzaldeaikt.eus/" class="text-white">Web Principal</a><br><a href="https://www.albisteak.buruntzaldeaikt.eus" class="text-white" target="_blank">Blog-a EUS</a>&nbsp;|&nbsp;<a href="https://noticiasbikt.buruntzaldeaikt.eus" class="text-white text-primary" target="_blank">Blog CAS</a><a href="https://www.lasartekosaria.buruntzaldeaikt.eus" class="text-white"><br></a><a href="https://www.lasartekosaria.buruntzaldeaikt.eus" class="text-white text-primary" target="_blank">Lasarteko Saria | Trofeo Lasarte</a><br><a href="https://dleht.buruntzaldeaikt.eus/" class="text-white" target="_blank">DLEHT</a> | <a href="https://cehld.buruntzaldeaikt.eus/" class="text-white" target="_blank">CEHLD</a><br><br><a href="https://www.buruntzaldeaikt.eus/dohaintzak.html" class="text-white" target="_blank">Dohaintzak</a> | <a href="https://www.es.buruntzaldeaikt.eus/donaciones.html" class="text-white" target="_blank">Donaciones</a><a href="https://cehld.buruntzaldeaikt.eus/" class="text-white" target="_blank"><br></a><a href="https://www.lasartekosaria.buruntzaldeaikt.eus" class="text-white text-primary" target="_blank"><br></a><br><strong>Aviso legal</strong><br><a href="Nota-Legal.html" class="text-white">Nota Legal y Política de Privacidad</a><br><a href="https://www.lasartekosaria.buruntzaldeaikt.eus" class="text-white"><br></a></p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCt1265A4qvZy9HKUeA8J15AOC4SrCyZe4&amp;q=Buruntzaldea IKT" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=Buruntzaldea IKT" allowfullscreen=""></iframe></div>
             </div>
         </div>
         <div class="footer-lower">
