--- a/aukerak-oportunidades.html
+++ b/aukerak-oportunidades.html
@@ -185,7 +185,7 @@ Productos con precios especiales. Últimas existencias.">
     </div>
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-7a" data-rv-view="73">
+<section class="mbr-section" id="witsec-modal-window-block-7a" data-rv-view="308">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -205,10 +205,15 @@ Productos con precios especiales. Últimas existencias.">
 	<script>
 	if (typeof OpenModal === 'undefined') {
 		OpenModal = function(modalName) {
-			if ($('#' + modalName).length)
-				$('#' + modalName).modal('show');
-			else
-				alert("Sorry, but there is no modal for " + modalName);
+			if(typeof jQuery === "function") {
+				if ($('#' + modalName).length)
+					$('#' + modalName).modal('show');
+				else
+					alert("Sorry, but there is no modal for " + modalName);
+			} else {
+				let mdw = new bootstrap.Modal(document.getElementById(modalName), {});
+				mdw.show();
+			}
 		}
 	}
 
@@ -439,7 +444,7 @@ Productos con precios especiales. Últimas existencias.">
                 <p class="mbr-text"><strong>Bereziak-Especiales</strong>&nbsp;<br><a href="https://www.buruntzaldeaikt.eus/" class="text-white">Webgunea</a>&nbsp;| <a href="https://www.es.buruntzaldeaikt.eus/" class="text-white">Web</a><br><a href="https://www.albisteak.buruntzaldeaikt.eus" class="text-white" target="_blank">Blog-a EUS</a>&nbsp;|&nbsp;<a href="https://noticiasbikt.buruntzaldeaikt.eus" class="text-white text-primary" target="_blank">Blog CAS</a><a href="https://www.lasartekosaria.buruntzaldeaikt.eus" class="text-white"><br></a><a href="https://www.lasartekosaria.buruntzaldeaikt.eus" class="text-white text-primary" target="_blank">Lasarteko Saria | Trofeo Lasarte</a><br><a href="https://dleht.buruntzaldeaikt.eus/" class="text-white" target="_blank">DLEHT</a> | <a href="https://cehld.buruntzaldeaikt.eus/" class="text-white" target="_blank">CEHLD</a><br><br><a href="https://www.buruntzaldeaikt.eus/dohaintzak.html" class="text-white" target="_blank">Dohaintzak</a> | <a href="https://www.es.buruntzaldeaikt.eus/donaciones.html" class="text-white" target="_blank">Donaciones</a><a href="https://cehld.buruntzaldeaikt.eus/" class="text-white" target="_blank"><br></a><a href="https://www.lasartekosaria.buruntzaldeaikt.eus" class="text-white text-primary" target="_blank"><br></a><br><strong>Aviso legal</strong><br>·&gt; <a href="Nota-Legal.html" class="text-white">Nota Legal y Política de Privacidad</a><br><a href="https://www.lasartekosaria.buruntzaldeaikt.eus" class="text-white"><br></a></p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=Buruntzaldea IKT" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCt1265A4qvZy9HKUeA8J15AOC4SrCyZe4&amp;q=Buruntzaldea IKT" allowfullscreen=""></iframe></div>
             </div>
         </div>
         <div class="footer-lower">
